# Git-Diff-Analyzer

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
git_utils/: git_commands.py
remote/: github_api.py  remote_interface.py
services/: diff_service.py  repo_mapper.py
src/git_diff_analyzer/: __init__.py
src/git_diff_analyzer/git_utils/: git_commands.py
src/git_diff_analyzer/remote/: github_api.py  remote_interface.py
src/git_diff_analyzer/services/: diff_service.py  repo_mapper.py
tests/: conftest.py
tests/git_utils/: test_git_commands.py
tests/remote/: test_github_api.py
tests/services/: test_diff_service.py  test_repo_mapper.py
