[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git_diff_analyzer"
version = "0.1.0"
authors = [
    {name="Igor Amidzic", email="igorami44@gmail.com"},
]
dependencies = [
    "exceptiongroup>=1.2.0",
    "flake8>=7.1.0",
    "iniconfig>=2.1.0",
    "mccabe>=0.7.0",
    "packaging>=24.2",
    "pluggy>=1.5.0",
    "pycodestyle>=2.12.1",
    "pyflakes>=3.2.0",
    "pytest>=8.3.5",
    "tomli>=2.2.1",
    "requests>=2.32.3"
]
description="A library to compare and identify files that were independently changed in both a git_diff_analyzer.remote GitHub repository branch (branchA) and a local repository branch (branchB). The library finds all files with the same path that were modified in both branches since the merge base commit, avoiding fetching branchA remotely. It uses GitHub REST or GraphQL API for git_diff_analyzer.remote repository requests and command-line git commands for local repository interactions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/IgorAmi52/Git-Diff-Analyzer"